--- a/config.env
+++ b/config.env
@@ -3,7 +3,7 @@
 BOT_TOKEN = ""
 GDRIVE_FOLDER_ID = ""
 TELEGRAPH_TOKEN = ""
-OWNER_ID = 1161316820
+OWNER_ID = 1004538768
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
@@ -24,8 +24,8 @@ SHORTENER_API = ""
 # Add more buttons (two buttons are already added of file link and index link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
 BUTTON_THREE_NAME = "📜 𝗝𝗢𝗜𝗡 𝗧𝗗 📜"
-BUTTON_THREE_URL = "https://groups.google.com/forum/m/#!forum/maxxmirror"
-BUTTON_FOUR_NAME = "📮𝗢𝗧𝗛𝗘𝗥𝗦 𝗕𝗢𝗧📮"
-BUTTON_FOUR_URL = "https://t.me/MaxxBots"
+BUTTON_THREE_URL = "https://groups.google.com/u/1/g/TorrentWareAi"
+BUTTON_FOUR_NAME = "📮Join Our Channel 📮"
+BUTTON_FOUR_URL = "https://t.me/joinchat/AAAAAFIN2ibGFWeYBNj2Xg"
 BUTTON_FIVE_NAME = ""
 BUTTON_FIVE_URL = ""
